<resources>
    <string name="app_name">EMB - Electronic Wallet</string>
    <string name="app_name_start">EMB\nElectronic Wallet</string>
    <string name="search">Tìm kiếm</string>
    <string name="hello">Chào buổi sáng!</string>
    <string name="user_name">PHAN KHẮC MẠNH</string>
    <string name="login">Đăng Nhập</string>
    <string name="transfer_money">Chuyển Tiền</string>
    <string name="credit_card">Dịch Vụ Thẻ</string>
    <string name="bill">Thanh Toán</string>
    <string name="shopping">Mua Sắm</string>
    <string name="home">Trang Chủ</string>
    <string name="promotion">Ưu Đãi</string>
    <string name="qr">Quét QR</string>
    <string name="history">Lịch Sử</string>
    <string name="notification">Thông Báo</string>
    <string name="setting">Cài Đặt</string>
    <string name="user">Tôi</string>
    <string name="password">Mật Khẩu</string>
    <string name="number_phone">0376888888</string>
    <string name="forgot_password">Quyên Mật Khẩu</string>
    <string name="input_number_phone">Nhập số điện thoại</string>
    <string name="register">
        <font color="#FF000000">Chưa có tài khoản?</font>
        <font color="#3562FF">Đăng Ký</font>
    </string>
    <string name="sign_up">Đăng Ký Tài Khoản</string>
    <string name="input_user_name">Nhập tên tài khoản</string>
    <string name="input_confirm_password">Nhập lại mật khẩu</string>
    <string name="input_number_id">Nhập số CCCD</string>
    <string name="out_register">
        <font color="#FF000000">Bạn đã có tài khoản?</font>
        <font color="#3562FF">Đăng Nhập</font>
    </string>
    <string name="bottom_register">Đăng Ký</string>
    <string name="payment_account">Tài khoản</string>
    <string name="info_account">Thông tin tài khoản</string>
    <string name="save_money">Tiết Kiệm</string>
    <string name="electronic_services">Dịch Vụ Điện Tử</string>
    <string name="phone_recharge">Nạp Tiền\nĐiện Thoại</string>
    <string name="loan">Vay Tiền</string>
    <string name="_4g">Dịch Vụ 3G/4G</string>
    <string name="balance_fluctuations">Biến Động\nSố Dư</string>
    <string name="bus_ticket">Vé Xe</string>
    <string name="cinema_ticket">Vé Xem Phim</string>
    <string name="financial_management">Tài Chính\nCá Nhân</string>
    <string name="support">Hỗ Trợ\nKhách Hàng</string>
    <string name="switchboard">Tổng Đài\nCSKH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Đóng</string>
    <string name="number_account">Số tài khoản</string>
    <string name="account_balance">Số dư tài khoản</string>
    <string name="number_money">24,022,003,690 VND</string>
    <string name="select_beneficiary">Chọn Người Thụ Hưởng</string>
    <string name="number_account_phone">Số tài khoản / Số điện thoại</string>
    <string name="phonebook">Danh Bạ</string>
    <string name="recently">Gần Đây</string>
    <string name="next">Tiếp Tục</string>
    <string name="emb">EMB</string>
    <string name="transaction_details">Thông Tin Giao Dịch</string>
    <string name="account">Tài khoản gốc</string>
    <string name="move_in">Chuyển đến</string>
    <string name="text_number_money">Số tiền</string>
    <string name="input_number_money">Nhập số tiền</string>
    <string name="vnd">VNĐ</string>
    <string name="content_transaction">Nội dung giao dịch</string>
    <string name="input_content_transaction">Nhập nội dung giao dịch</string>
    <string name="save_beneficiary_phonebook">Lưu vào danh bạ người thụ hưởng</string>
    <string name="confirm_transaction">Xác Nhận Giao Dịch</string>
    <string name="origin_account">Tài khoản nguồn</string>
    <string name="account_beneficiary">Tài khoản thụ hưởng</string>
    <string name="name_beneficiary">Tên người thụ hưởng</string>
    <string name="banking_beneficiary">Ngân hàng thụ hưởng</string>
    <string name="number_money_residual">Số tiền còn lại</string>
    <string name="date_transfer">Ngày giao dịch</string>
    <string name="date">23/05/2024 06:24:02</string>
    <string name="text_content_transfer">Phan Khắc Mạnh chuyển tiền</string>
    <string name="confirm">Xác Nhận</string>
    <string name="text_confirm_pay">Mã xác thực OTP bằng phương thức xác thực Smart OTP cho mã giao dịch
        <font color="#3562FF">291829384923</font>
        của quý khách được hiển thị ở dưới đây</string>
    <string name="code_otp">24022003</string>
    <string name="successful_transaction">Giao Dịch Thành Công</string>
    <string name="text_content_transaction">Quý khách đã chuyển thành công số tiền
        <font color="#3562FF">24,022,003,690 VND</font>
        đến số tài khoản
        <font color="#3562FF">0376888888 / PHAN KHAC MANH / EMB</font>
        vào lúc 23/05/2024 06:24:02. Nội dung: Phan Khắc Mạnh chuyển tiền</string>
    <string name="code_transaction">Mã giao dịch:
        <font color="#3562FF">291829384923</font></string>
    <string name="new_transaction">Tạo Giao Dịch Mới</string>
    <string name="back_home">Quay Lại Trang Chủ</string>
    <string name="account_pay">Tài khoản thanh toán</string>
    <string name="new_emb">EMB:</string>
    <string name="save_online">Tiết kiệm Online</string>
    <string name="send_deposit_online">Gửi tiết kiệm Online</string>
    <string name="withdraw_deposit_online">Rút tiết kiệm Online</string>
    <string name="open_accumulation">Mở tài khoản tích lũy</string>
    <string name="send_accumulation_online">Gửi tích lũy Online</string>
    <string name="withdraw_accumulation_online">Rút tích lũy Online</string>
    <string name="accumulation_online">Tích lũy Online</string>
    <string name="account_origin">Tài khoản nguồn</string>
    <string name="available_balances">Số dư khả dụng</string>
    <string name="info_deposit">Thông tin tiết kiệm</string>
    <string name="select_term">Chọn kỳ hạn</string>
    <string name="number_send">Số tiền gửi (VNĐ)</string>
    <string name="select_maturity_method">Chọn phương thức đáo hạn</string>
    <string name="account_savings_online">Tài khoản tiết kiệm Online</string>
    <string name="info_withdraw_money">Thông tin rút tiền</string>
    <string name="account_receive_money">Tài khoản nhận tiền</string>
    <string name="info_send_money">Thông tin tiền gửi</string>
    <string name="select_product_accumulation">Chọn loại sản phẩm tích lũy</string>
    <string name="memo_name">Tên ghi nhớ</string>
    <string name="accumulation_term">Tích lũy định kỳ</string>
    <string name="info_payment">Thông tin nộp tiền</string>
    <string name="select_account_deposit">Chọn tài khoản tích lũy</string>
    <string name="account_deposit">Tài khoản gửi tích lũy Online</string>
    <string name="my_gift">Quà của tôi</string>
    <string name="text_support">Hỗ trợ</string>
    <string name="text_available_points">Điểm EM-Point khả dụng</string>
    <string name="points">2,402</string>
    <string name="refund_money">Hoàn Tiền</string>
    <string name="entertainment">Giải Trí</string>
    <string name="cuisine">Ẩm Thực</string>
    <string name="tv">Truyền Hình</string>
    <string name="health">Sức Khỏe</string>
    <string name="gift_suggestions">Gợi ý quà tặng</string>
    <string name="gift_list_increased">Danh mục quà tăng</string>
    <string name="expiry">Hạn sử dụng: 24/02/2025</string>
    <string name="number_like_gift">2402</string>
</resources>