<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui_components.activity.ConfirmTransactionActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/blue_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/back"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:text="@string/confirm_transaction"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:background="@drawable/white_bg4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/textViewOriginAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/origin_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textNumberAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/number_phone"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewOriginAccount"/>

        <TextView
            android:id="@+id/textViewAccountBeneficiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/account_beneficiary"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textViewOriginAccount"
            app:layout_constraintTop_toBottomOf="@+id/textViewOriginAccount"/>

        <TextView
            android:id="@+id/textAccountBeneficiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_phone"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textViewAccountBeneficiary"
            app:layout_constraintEnd_toEndOf="@+id/textNumberAccount"/>

        <TextView
            android:id="@+id/textViewNameBeneficiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_beneficiary"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textViewAccountBeneficiary"
            app:layout_constraintTop_toBottomOf="@+id/textViewAccountBeneficiary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textViewNameBeneficiary"
            app:layout_constraintEnd_toEndOf="@+id/textNumberAccount"/>

        <TextView
            android:id="@+id/textViewNameBanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/banking_beneficiary"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textViewNameBeneficiary"
            app:layout_constraintTop_toBottomOf="@+id/textViewNameBeneficiary"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textBankingBeneficiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emb"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textViewNameBanking"
            app:layout_constraintEnd_toEndOf="@+id/textNumberAccount"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:background="@drawable/white_bg4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textViewNumberMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/text_number_money"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textNumberMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/number_money"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewNumberMoney"/>

        <TextView
            android:id="@+id/textViewMoneyResidual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/number_money_residual"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textViewNumberMoney"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumberMoney"/>

        <TextView
            android:id="@+id/textMoneyResidual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_money"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/textViewMoneyResidual"
            app:layout_constraintEnd_toEndOf="@+id/textNumberMoney"/>

        <TextView
            android:id="@+id/textViewDateTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_transfer"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textViewMoneyResidual"
            app:layout_constraintTop_toBottomOf="@+id/textViewMoneyResidual"/>

        <TextView
            android:id="@+id/textDateTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textViewDateTransfer"
            app:layout_constraintEnd_toEndOf="@+id/textNumberMoney"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateTransfer"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_transaction"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textContentTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/text_content_transfer"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:lineSpacingExtra="5dp"
                app:layout_constraintTop_toTopOf="@+id/textViewContent"
                app:layout_constraintEnd_toEndOf="@+id/textNumberMoney"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomConfirm">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/check_circle"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/textConfirmPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_confirm_pay"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"/>

        <TextView
            android:id="@+id/textCodeOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:letterSpacing="1.5"
            android:text="@string/code_otp"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottomConfirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/blue_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@android:style/Widget.Button"/>

    <FrameLayout
        android:id="@+id/layoutCodePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>